kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: eterna1ity-health-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: eterna1ity-health-app
    template:
       metadata:
          labels:
             app: eterna1ity-health-app
       spec:
          containers:
          - name: eterna1ity-spring-boot-docker
            image: eterna1ity/spring-boot-docker:latest
            ports:
              - name: web 
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
