kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eterna1ity-health-service-ingress
  annotations:
    # ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
        #- path: /
        - path: /otusapp/aleksandr($|/)(.*)
          pathType: Prefix
          backend:
            service:
              name: eterna1ity-health-service
              port: 
                number: 8000
